# consult-evaluation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
consult_evaluation/: utils.py
consult_evaluation/unsupervised/: metrics.py
docs/: evaluation.md
tests/: conftest.py  test_metrics.py  test_utils.py
